fix: link issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -89,6 +89,9 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #a1a1a1;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 
 @property --border-angle {
